fix animation font / clean up

--- a/Trash?/damnithype.hype/data.plist
+++ b/Trash?/damnithype.hype/data.plist
@@ -149,7 +149,7 @@
 	<key>guidesAreVisible</key>
 	<true/>
 	<key>lastCheckDate</key>
-	<date>2014-12-11T06:24:41Z</date>
+	<date>2014-12-11T19:40:02Z</date>
 	<key>layout</key>
 	<dict>
 		<key>keyframeTimelineHeight</key>
@@ -1260,9 +1260,9 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>PaddingLeft</string>
+							<string>ZIndex</string>
 							<key>objectValue</key>
-							<string>8px</string>
+							<string>5</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -1272,9 +1272,9 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>ZIndex</string>
+							<string>PaddingLeft</string>
 							<key>objectValue</key>
-							<string>5</string>
+							<string>8px</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -1419,9 +1419,9 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 					<array>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>496px</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -1545,18 +1545,18 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>496px</string>
+							<string>div</string>
 						</dict>
 					</array>
 					<key>28</key>
 					<array>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>600px</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -1674,18 +1674,18 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>600px</string>
+							<string>div</string>
 						</dict>
 					</array>
 					<key>3</key>
 					<array>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>400px</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -1809,18 +1809,18 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>400px</string>
+							<string>div</string>
 						</dict>
 					</array>
 					<key>30</key>
 					<array>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>115px</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -1938,18 +1938,18 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>115px</string>
+							<string>div</string>
 						</dict>
 					</array>
 					<key>32</key>
 					<array>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>115px</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -2067,18 +2067,18 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>115px</string>
+							<string>div</string>
 						</dict>
 					</array>
 					<key>34</key>
 					<array>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>144px</string>
+							<string>div</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -2196,18 +2196,18 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>144px</string>
 						</dict>
 					</array>
 					<key>5</key>
 					<array>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>144px</string>
+							<string>div</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -2379,18 +2379,18 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>144px</string>
 						</dict>
 					</array>
 					<key>7</key>
 					<array>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>400px</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -2538,9 +2538,9 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>400px</string>
+							<string>div</string>
 						</dict>
 					</array>
 					<key>9</key>
@@ -2553,9 +2553,9 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>TagName</string>
+							<string>OriginalWidth</string>
 							<key>objectValue</key>
-							<string>div</string>
+							<string>400px</string>
 						</dict>
 						<dict>
 							<key>identifier</key>
@@ -2715,9 +2715,9 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 						</dict>
 						<dict>
 							<key>identifier</key>
-							<string>OriginalWidth</string>
+							<string>TagName</string>
 							<key>objectValue</key>
-							<string>400px</string>
+							<string>div</string>
 						</dict>
 					</array>
 				</dict>
@@ -2852,7 +2852,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>473914FF-D969-4520-888A-70C2CB610C02-9456-000047797886B675</string>
+									<string>ADF16F0E-35E3-4E40-8E03-26B563DABB0B-11086-000058D46461E40A</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -2904,7 +2904,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>473914FF-D969-4520-888A-70C2CB610C02-9456-000047797886B675</string>
+									<string>ADF16F0E-35E3-4E40-8E03-26B563DABB0B-11086-000058D46461E40A</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -2956,7 +2956,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>473914FF-D969-4520-888A-70C2CB610C02-9456-000047797886B675</string>
+									<string>ADF16F0E-35E3-4E40-8E03-26B563DABB0B-11086-000058D46461E40A</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -3010,7 +3010,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 								<key>uuid</key>
 								<string>5D2843E5-5E0D-494C-9130-8C092C3F1889-226-00001086C763FC0E</string>
 								<key>zIndex</key>
-								<integer>1</integer>
+								<integer>2</integer>
 							</dict>
 							<dict>
 								<key>duration</key>
@@ -3044,7 +3044,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 								<key>uuid</key>
 								<string>2F5093FA-C089-4AF2-8EDD-06782D12EBA6-226-00000544E623C3AA</string>
 								<key>zIndex</key>
-								<integer>2</integer>
+								<integer>3</integer>
 							</dict>
 							<dict>
 								<key>duration</key>
@@ -3110,7 +3110,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>A856FADC-A6BC-455B-91B7-0EF82ED4F412-9456-000047797889772E</string>
+									<string>8D277CEC-7791-4A2B-922D-1416532F0418-11086-000058D46464C1B2</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -3162,7 +3162,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>A856FADC-A6BC-455B-91B7-0EF82ED4F412-9456-000047797889772E</string>
+									<string>8D277CEC-7791-4A2B-922D-1416532F0418-11086-000058D46464C1B2</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -3214,7 +3214,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>A856FADC-A6BC-455B-91B7-0EF82ED4F412-9456-000047797889772E</string>
+									<string>8D277CEC-7791-4A2B-922D-1416532F0418-11086-000058D46464C1B2</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -3268,7 +3268,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 								<key>uuid</key>
 								<string>27CB419B-04BD-4417-A0AD-E3A75A27061F-226-000005575F1E392A</string>
 								<key>zIndex</key>
-								<integer>3</integer>
+								<integer>4</integer>
 							</dict>
 							<dict>
 								<key>duration</key>
@@ -3334,7 +3334,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>C78CDB8F-49DB-4158-BC06-12D3A9E3ED12-9456-00004779788B16C5</string>
+									<string>5E6370E4-4A37-4554-9E39-C6A15BC6915E-11086-000058D4646626A2</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -3386,7 +3386,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>C78CDB8F-49DB-4158-BC06-12D3A9E3ED12-9456-00004779788B16C5</string>
+									<string>5E6370E4-4A37-4554-9E39-C6A15BC6915E-11086-000058D4646626A2</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -3472,7 +3472,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>065FBE88-D9DB-45F6-959A-E1F754C5B729-9456-00004779788C1880</string>
+									<string>954903EC-C5F0-4A85-AA16-876AEDF2E6D9-11086-000058D4646707F1</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -3524,7 +3524,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>065FBE88-D9DB-45F6-959A-E1F754C5B729-9456-00004779788C1880</string>
+									<string>954903EC-C5F0-4A85-AA16-876AEDF2E6D9-11086-000058D4646707F1</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -3576,7 +3576,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>C78CDB8F-49DB-4158-BC06-12D3A9E3ED12-9456-00004779788B16C5</string>
+									<string>5E6370E4-4A37-4554-9E39-C6A15BC6915E-11086-000058D4646626A2</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -3662,7 +3662,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>065FBE88-D9DB-45F6-959A-E1F754C5B729-9456-00004779788C1880</string>
+									<string>954903EC-C5F0-4A85-AA16-876AEDF2E6D9-11086-000058D4646707F1</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -3920,7 +3920,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 								<key>uuid</key>
 								<string>8DE7308C-063D-4E94-91D3-58B592915B43-3880-00001B035A811CA6</string>
 								<key>zIndex</key>
-								<integer>2</integer>
+								<integer>9</integer>
 							</dict>
 							<dict>
 								<key>duration</key>
@@ -4054,7 +4054,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>FA04355C-6189-4A99-B283-7379481E60E7-9456-00004779788F0616</string>
+									<string>7EB4EDC1-BC69-45DA-BD86-8A8D7DC763AC-11086-000058D4646A0DF5</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -4106,7 +4106,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>FA04355C-6189-4A99-B283-7379481E60E7-9456-00004779788F0616</string>
+									<string>7EB4EDC1-BC69-45DA-BD86-8A8D7DC763AC-11086-000058D4646A0DF5</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -4158,7 +4158,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>7F0F1C55-1303-4906-A4B8-2F888F5D0895-9456-00004779788FBE3A</string>
+									<string>1EB65B74-F83C-4242-A1A1-542D261BE330-11086-000058D4646AC535</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -4244,7 +4244,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>7F0F1C55-1303-4906-A4B8-2F888F5D0895-9456-00004779788FBE3A</string>
+									<string>1EB65B74-F83C-4242-A1A1-542D261BE330-11086-000058D4646AC535</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -4296,7 +4296,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>FA04355C-6189-4A99-B283-7379481E60E7-9456-00004779788F0616</string>
+									<string>7EB4EDC1-BC69-45DA-BD86-8A8D7DC763AC-11086-000058D4646A0DF5</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -4348,7 +4348,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>7F0F1C55-1303-4906-A4B8-2F888F5D0895-9456-00004779788FBE3A</string>
+									<string>1EB65B74-F83C-4242-A1A1-542D261BE330-11086-000058D4646AC535</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -4660,7 +4660,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 								<key>uuid</key>
 								<string>13FBD11D-FB18-43D8-A58C-80C4DDD406C9-3880-00001B080E339257</string>
 								<key>zIndex</key>
-								<integer>3</integer>
+								<integer>17</integer>
 							</dict>
 							<dict>
 								<key>duration</key>
@@ -4847,7 +4847,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>2729CFAE-57BB-443D-B0C2-CCA0D9C165CC-9456-0000477978936EB7</string>
+									<string>958F3E4A-2A59-4DCA-8533-6A4A1A769DF4-11086-000058D4646E546A</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -4919,7 +4919,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>9C01A65C-51BE-488D-9235-ADF70509FBBC-9456-0000477978941D2D</string>
+									<string>5A3305BC-F12B-47B4-833E-5E2FA4757A07-11086-000058D4646EEEE3</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -4964,7 +4964,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>2729CFAE-57BB-443D-B0C2-CCA0D9C165CC-9456-0000477978936EB7</string>
+									<string>958F3E4A-2A59-4DCA-8533-6A4A1A769DF4-11086-000058D4646E546A</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -5036,7 +5036,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>9C01A65C-51BE-488D-9235-ADF70509FBBC-9456-0000477978941D2D</string>
+									<string>5A3305BC-F12B-47B4-833E-5E2FA4757A07-11086-000058D4646EEEE3</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -5081,7 +5081,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>2729CFAE-57BB-443D-B0C2-CCA0D9C165CC-9456-0000477978936EB7</string>
+									<string>958F3E4A-2A59-4DCA-8533-6A4A1A769DF4-11086-000058D4646E546A</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>7</string>
@@ -5126,7 +5126,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 										</dict>
 									</array>
 									<key>oid</key>
-									<string>9C01A65C-51BE-488D-9235-ADF70509FBBC-9456-0000477978941D2D</string>
+									<string>5A3305BC-F12B-47B4-833E-5E2FA4757A07-11086-000058D4646EEEE3</string>
 								</dict>
 								<key>referenceOid</key>
 								<string>9</string>
@@ -5180,7 +5180,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 								<key>uuid</key>
 								<string>B3DE2AFF-CB2A-4AFE-ABEE-AACA378CCFE2-6767-000029D25DCE3EEA</string>
 								<key>zIndex</key>
-								<integer>17</integer>
+								<integer>18</integer>
 							</dict>
 							<dict>
 								<key>duration</key>
@@ -5214,7 +5214,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 								<key>uuid</key>
 								<string>930C2D03-0EAC-40D8-A6D9-5441C63A442D-6767-000029DCABD309B7</string>
 								<key>zIndex</key>
-								<integer>18</integer>
+								<integer>19</integer>
 							</dict>
 							<dict>
 								<key>duration</key>
@@ -5828,9 +5828,7 @@ property, and international trade.&lt;o:p&gt;&lt;/o:p&gt;&lt;/p&gt;
 			<key>scrollViewOffset</key>
 			<string>{0, 0}</string>
 			<key>selectedObjects</key>
-			<array>
-				<string>34</string>
-			</array>
+			<array/>
 			<key>splitHeight</key>
 			<real>544</real>
 		</dict>
